--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/csibivili/memory-game#readme",
   "devDependencies": {
+    "css-loader": "^5.1.2",
+    "style-loader": "^2.0.0",
     "ts-loader": "^8.0.17",
     "typescript": "^4.2.3",
     "webpack": "^5.24.3",
