--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
   },
   "homepage": "https://github.com/csibivili/memory-game#readme",
   "dependencies": {
-    "cors": "^2.8.5",
     "express": "^4.17.1"
   },
   "devDependencies": {
     "concurrently": "^6.0.0",
     "nodemon": "^2.0.7"
-  }
+  },
+  "type": "module"
 }
